fix layout shift between to flag

--- a/app/scss/pages/_flag-nerd-classic.scss
+++ b/app/scss/pages/_flag-nerd-classic.scss
@@ -11,6 +11,7 @@
 	.flag-container {
 		margin-top: 1rem;
 		width: 15rem;
+		min-height: 10rem;
 
 		.flag {
 			height: 10rem;
@@ -35,6 +36,7 @@
 		grid-template-columns: 1fr 1fr;
 		gap: 1rem;
 		margin-top: 1rem;
+		min-height: 9rem;
 
 		@media (min-width: 768px) {
 			gap: 2rem;
