--- a/app/scss/pages/_flag-nerd-hard.scss
+++ b/app/scss/pages/_flag-nerd-hard.scss
@@ -10,6 +10,7 @@
 		margin-top: 1rem;
 		margin-bottom: 2rem;
 		width: 15rem;
+		height: 10rem;
 
 		.flag {
 			height: 10rem;
